{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 763,
  "lineage": "304f9756-07b2-b313-f960-b2e96ecc24a8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725350979:security-group/sg-0da85a2d7889b74a3",
            "description": "Security group for RDS instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0da85a2d7889b74a3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09d37b6bcd310f9a6"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-security-group",
            "name_prefix": "",
            "owner_id": "851725350979",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-security-group"
            },
            "tags_all": {
              "Name": "rds-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f673f195ae29dc85"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_security_group.module.alb_security_group.aws_security_group.this",
            "module.alb_security_group.module.alb_security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:851725350979:loadbalancer/app/project-intely-alb/e8b172fe64ae46f7",
            "arn_suffix": "app/project-intely-alb/e8b172fe64ae46f7",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "project-intely-alb-1120768713.eu-north-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-north-1:851725350979:loadbalancer/app/project-intely-alb/e8b172fe64ae46f7",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "project-intely-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-09d37b6bcd310f9a6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0aa1fbfec59e739f8"
              },
              {
                "subnet_id": "subnet-0de1ebb4ed9a06732"
              },
              {
                "subnet_id": "subnet-0e01d7167e2a52f5d"
              }
            ],
            "subnets": [
              "subnet-0aa1fbfec59e739f8",
              "subnet-0de1ebb4ed9a06732",
              "subnet-0e01d7167e2a52f5d"
            ],
            "tags": {
              "Environment": "project_intely",
              "Project": "intely",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "project_intely",
              "Project": "intely",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f673f195ae29dc85",
            "xff_header_processing_mode": "append",
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "dependencies": [
            "module.alb_security_group.module.alb_security_group.aws_security_group.this",
            "module.alb_security_group.module.alb_security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_default_route_table.private",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route.private",
            "module.vpc.aws_route.public",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_route_table.private"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "80",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:851725350979:listener/app/project-intely-alb/e8b172fe64ae46f7/1fcb3589c510c3c6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:851725350979:targetgroup/project-intely-tg/480e43945ad23111",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:851725350979:listener/app/project-intely-alb/e8b172fe64ae46f7/1fcb3589c510c3c6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:851725350979:loadbalancer/app/project-intely-alb/e8b172fe64ae46f7",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb_security_group.module.alb_security_group.aws_security_group.this",
            "module.alb_security_group.module.alb_security_group.aws_security_group.this_name_prefix",
            "module.target_group_http.aws_lb_target_group.this",
            "module.target_group_https.aws_lb_target_group.this",
            "module.vpc.aws_default_route_table.private",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route.private",
            "module.vpc.aws_route.public",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_route_table.private"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "443",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:851725350979:listener/app/project-intely-alb/e8b172fe64ae46f7/31d63dfde5cc1972",
            "certificate_arn": "arn:aws:acm:eu-north-1:851725350979:certificate/e9ac054b-81e6-4114-879d-d5795c451f42",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:851725350979:targetgroup/project-intely-tg-https/d46fb31452fa7c65",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:851725350979:listener/app/project-intely-alb/e8b172fe64ae46f7/31d63dfde5cc1972",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:851725350979:loadbalancer/app/project-intely-alb/e8b172fe64ae46f7",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_acm_certificate.cert",
            "module.alb.aws_lb.this",
            "module.alb.tls_cert_request.cert",
            "module.alb.tls_locally_signed_cert.cert",
            "module.alb.tls_private_key.cert",
            "module.alb.tls_self_signed_cert.ca",
            "module.alb_security_group.module.alb_security_group.aws_security_group.this",
            "module.alb_security_group.module.alb_security_group.aws_security_group.this_name_prefix",
            "module.target_group_http.aws_lb_target_group.this",
            "module.target_group_https.aws_lb_target_group.this",
            "module.vpc.aws_default_route_table.private",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route.private",
            "module.vpc.aws_route.public",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_route_table.private"
          ]
        }
      ]
    },
    {
      "module": "module.alb_security_group.module.alb_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725350979:security-group/sg-09d37b6bcd310f9a6",
            "description": "Security group for Project Intely ALB",
            "egress": [],
            "id": "sg-09d37b6bcd310f9a6",
            "ingress": [],
            "name": "project-intely-alb-sg-20240619131247846200000003",
            "name_prefix": "project-intely-alb-sg-",
            "owner_id": "851725350979",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "project_intely",
              "Name": "project-intely-alb-sg",
              "Project": "intely",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "project_intely",
              "Name": "project-intely-alb-sg",
              "Project": "intely",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0f673f195ae29dc85"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb_security_group.module.alb_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-4137908323",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-09d37b6bcd310f9a6",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_security_group.module.alb_security_group.aws_security_group.this",
            "module.alb_security_group.module.alb_security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb_security_group.module.alb_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-2660629324",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09d37b6bcd310f9a6",
            "security_group_rule_id": "sgr-05e156743dcadf238",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_security_group.module.alb_security_group.aws_security_group.this",
            "module.alb_security_group.module.alb_security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-3498104826",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09d37b6bcd310f9a6",
            "security_group_rule_id": "sgr-065998243de886eec",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_security_group.module.alb_security_group.aws_security_group.this",
            "module.alb_security_group.module.alb_security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.rds.module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725350979:security-group/sg-0b22e3c0cfbf9237d",
            "description": "Control traffic to/from RDS Aurora project-intely-tg",
            "egress": [],
            "id": "sg-0b22e3c0cfbf9237d",
            "ingress": [],
            "name": "project-intely-tg-20240619131248006900000004",
            "name_prefix": "project-intely-tg-",
            "owner_id": "851725350979",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "project_intely",
              "Name": "project-intely-tg",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "project_intely",
              "Name": "project-intely-tg",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f673f195ae29dc85"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.target_group_http",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:851725350979:targetgroup/project-intely-tg/480e43945ad23111",
            "arn_suffix": "targetgroup/project-intely-tg/480e43945ad23111",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 5,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:851725350979:targetgroup/project-intely-tg/480e43945ad23111",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "project-intely-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f673f195ae29dc85"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.target_group_https",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:851725350979:targetgroup/project-intely-tg-https/d46fb31452fa7c65",
            "arn_suffix": "targetgroup/project-intely-tg-https/d46fb31452fa7c65",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 5,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:851725350979:targetgroup/project-intely-tg-https/d46fb31452fa7c65",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "project-intely-tg-https",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f673f195ae29dc85"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725350979:route-table/rtb-02726c441f61918fe",
            "associations": [
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-0575069d2be85ebdc",
                "route_table_id": "rtb-02726c441f61918fe",
                "subnet_id": "subnet-0b4bc54a12ac14f3f"
              },
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-01a31fd0f8c1b9b6e",
                "route_table_id": "rtb-02726c441f61918fe",
                "subnet_id": "subnet-0b7caba936be467fe"
              },
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-086514e07c99ff9e1",
                "route_table_id": "rtb-02726c441f61918fe",
                "subnet_id": "subnet-03aa92fdcda1b281a"
              }
            ],
            "filter": null,
            "gateway_id": null,
            "id": "rtb-02726c441f61918fe",
            "owner_id": "851725350979",
            "route_table_id": "rtb-02726c441f61918fe",
            "routes": [],
            "subnet_id": "subnet-0b4bc54a12ac14f3f",
            "tags": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f673f195ae29dc85"
          },
          "sensitive_attributes": []
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725350979:route-table/rtb-02726c441f61918fe",
            "associations": [
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-086514e07c99ff9e1",
                "route_table_id": "rtb-02726c441f61918fe",
                "subnet_id": "subnet-03aa92fdcda1b281a"
              },
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-01a31fd0f8c1b9b6e",
                "route_table_id": "rtb-02726c441f61918fe",
                "subnet_id": "subnet-0b7caba936be467fe"
              },
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-0575069d2be85ebdc",
                "route_table_id": "rtb-02726c441f61918fe",
                "subnet_id": "subnet-0b4bc54a12ac14f3f"
              }
            ],
            "filter": null,
            "gateway_id": null,
            "id": "rtb-02726c441f61918fe",
            "owner_id": "851725350979",
            "route_table_id": "rtb-02726c441f61918fe",
            "routes": [],
            "subnet_id": "subnet-0b7caba936be467fe",
            "tags": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f673f195ae29dc85"
          },
          "sensitive_attributes": []
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725350979:route-table/rtb-02726c441f61918fe",
            "associations": [
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-0575069d2be85ebdc",
                "route_table_id": "rtb-02726c441f61918fe",
                "subnet_id": "subnet-0b4bc54a12ac14f3f"
              },
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-086514e07c99ff9e1",
                "route_table_id": "rtb-02726c441f61918fe",
                "subnet_id": "subnet-03aa92fdcda1b281a"
              },
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-01a31fd0f8c1b9b6e",
                "route_table_id": "rtb-02726c441f61918fe",
                "subnet_id": "subnet-0b7caba936be467fe"
              }
            ],
            "filter": null,
            "gateway_id": null,
            "id": "rtb-02726c441f61918fe",
            "owner_id": "851725350979",
            "route_table_id": "rtb-02726c441f61918fe",
            "routes": [],
            "subnet_id": "subnet-03aa92fdcda1b281a",
            "tags": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f673f195ae29dc85"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725350979:route-table/rtb-029c2411e07e2214d",
            "default_route_table_id": "rtb-029c2411e07e2214d",
            "id": "rtb-029c2411e07e2214d",
            "owner_id": "851725350979",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f673f195ae29dc85"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00d6ae5fc5e5054df",
            "arn": "arn:aws:ec2:eu-north-1:851725350979:elastic-ip/eipalloc-00d6ae5fc5e5054df",
            "domain": "vpc",
            "id": "eipalloc-00d6ae5fc5e5054df",
            "network_border_group": "eu-north-1",
            "public_dns": "ec2-51-21-32-29.eu-north-1.compute.amazonaws.com",
            "public_ip": "51.21.32.29",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-010bc0c7416327530",
            "arn": "arn:aws:ec2:eu-north-1:851725350979:elastic-ip/eipalloc-010bc0c7416327530",
            "domain": "vpc",
            "id": "eipalloc-010bc0c7416327530",
            "network_border_group": "eu-north-1",
            "public_dns": "ec2-13-60-123-67.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.60.123.67",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08b75f9488e782c55",
            "arn": "arn:aws:ec2:eu-north-1:851725350979:elastic-ip/eipalloc-08b75f9488e782c55",
            "domain": "vpc",
            "id": "eipalloc-08b75f9488e782c55",
            "network_border_group": "eu-north-1",
            "public_dns": "ec2-16-170-66-237.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.170.66.237",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725350979:internet-gateway/igw-04b099bcb111796d2",
            "id": "igw-04b099bcb111796d2",
            "owner_id": "851725350979",
            "tags": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f673f195ae29dc85"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00d6ae5fc5e5054df",
            "association_id": "eipassoc-09b4a072654a2ac90",
            "connectivity_type": "public",
            "id": "nat-0ad506348970a7d2e",
            "network_interface_id": "eni-07d70a22704f44747",
            "private_ip": "10.0.1.107",
            "public_ip": "51.21.32.29",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0aa1fbfec59e739f8",
            "tags": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "project_intely",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-010bc0c7416327530",
            "association_id": "eipassoc-0bc05743a5bcab8a4",
            "connectivity_type": "public",
            "id": "nat-0447416c200c40953",
            "network_interface_id": "eni-0a0da7b74f9c3572e",
            "private_ip": "10.0.2.179",
            "public_ip": "13.60.123.67",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e01d7167e2a52f5d",
            "tags": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "project_intely",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08b75f9488e782c55",
            "association_id": "eipassoc-020b1dfb9a725b94d",
            "connectivity_type": "public",
            "id": "nat-0f498db540ca083ef",
            "network_interface_id": "eni-0acc06116ee4e1aca",
            "private_ip": "10.0.3.225",
            "public_ip": "16.170.66.237",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0de1ebb4ed9a06732",
            "tags": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "project_intely",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-029c2411e07e2214d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ad506348970a7d2e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-029c2411e07e2214d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_default_route_table.private",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04b099bcb111796d2",
            "id": "r-rtb-005574b102bfe1d001080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-005574b102bfe1d00",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725350979:route-table/rtb-02726c441f61918fe",
            "id": "rtb-02726c441f61918fe",
            "owner_id": "851725350979",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f673f195ae29dc85"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725350979:route-table/rtb-005574b102bfe1d00",
            "id": "rtb-005574b102bfe1d00",
            "owner_id": "851725350979",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f673f195ae29dc85"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0575069d2be85ebdc",
            "route_table_id": "rtb-02726c441f61918fe",
            "subnet_id": "subnet-0b4bc54a12ac14f3f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a31fd0f8c1b9b6e",
            "route_table_id": "rtb-02726c441f61918fe",
            "subnet_id": "subnet-0b7caba936be467fe"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086514e07c99ff9e1",
            "route_table_id": "rtb-02726c441f61918fe",
            "subnet_id": "subnet-03aa92fdcda1b281a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0371f5712a76db119",
            "route_table_id": "rtb-005574b102bfe1d00",
            "subnet_id": "subnet-0aa1fbfec59e739f8"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e682374be3e6618",
            "route_table_id": "rtb-005574b102bfe1d00",
            "subnet_id": "subnet-0e01d7167e2a52f5d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00cc0e2793965b088",
            "route_table_id": "rtb-005574b102bfe1d00",
            "subnet_id": "subnet-0de1ebb4ed9a06732"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725350979:subnet/subnet-0b4bc54a12ac14f3f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b4bc54a12ac14f3f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725350979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f673f195ae29dc85"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725350979:subnet/subnet-0b7caba936be467fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b7caba936be467fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725350979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f673f195ae29dc85"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725350979:subnet/subnet-03aa92fdcda1b281a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03aa92fdcda1b281a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725350979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f673f195ae29dc85"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725350979:subnet/subnet-0aa1fbfec59e739f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aa1fbfec59e739f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851725350979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f673f195ae29dc85"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725350979:subnet/subnet-0e01d7167e2a52f5d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e01d7167e2a52f5d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851725350979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f673f195ae29dc85"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725350979:subnet/subnet-0de1ebb4ed9a06732",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de1ebb4ed9a06732",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851725350979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f673f195ae29dc85"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725350979:vpc/vpc-0f673f195ae29dc85",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0524871635cdadd8b",
            "default_route_table_id": "rtb-029c2411e07e2214d",
            "default_security_group_id": "sg-0c8cbd761fb234a99",
            "dhcp_options_id": "dopt-01fd146d2877d5712",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f673f195ae29dc85",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-029c2411e07e2214d",
            "owner_id": "851725350979",
            "tags": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "project_intely",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}